deploy: a26bc7b7c264b7842e75df70fb3e25a6892275f0

--- a/post1.html
+++ b/post1.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" href="../assets/css/pico.cyan.min.css">
-    <link rel="stylesheet" href="../assets/css/app.css">
+    <link rel="stylesheet" href="/assets/css/pico.cyan.min.css">
+    <link rel="stylesheet" href="/assets/css/app.css">
 </head>
 <body>
     <div class="nav-wrapper">
       <nav class="container">
-        <a class="contrast" href="../index.html">Proyecto Torrus</a>
+        <a class="contrast" href="/index.html">Proyecto Torrus</a>
         <div style="float: right;">
           
         </div>
@@ -17,16 +17,16 @@
     <main class="container">
 <h1>My First Blog Post</h1>
 <p>2024-05-29</p>
-<p>Category: <a href="../categories/tech.html">tech</a></p>
+<p>Category: <a href="/categories/tech.html">tech</a></p>
 <div>
     <h1>Hello World!</h1>
 <p>This is my tech blog post.</p>
 </div>
-<a href="../index.html">Back to Home</a>
+<a href="/index.html">Back to Home</a>
 </main>
 <footer>
   <nav class="container">
-      <a href="../index.html">Proyecto Torrus</a>
+      <a href="/index.html">Proyecto Torrus</a>
       <div style="float: right;">
           
         </div>
